# t-one-rest-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.redis  Makefile  README.md  docker-compose.yml  pyproject.toml
asr_api/: __init__.py  audio_processor.py  config.py  example_client.py  main.py  models.py  onnx_patch.py
asr_api/routers/: __init__.py  streaming.py  transcription.py
asr_api/services/: __init__.py  audio_service.py  streaming_service.py
asr_api/storage/: __init__.py  memory_storage.py  redis_storage.py
asr_api/utils/: __init__.py  auth.py  converters.py  exceptions.py  validators.py
